--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,32 @@
 language: rust
+
+addons:
+  apt:
+    packages:
+      - libssl-dev
+
+cache: cargo
+
 rust:
   - stable
   - beta
   - nightly
+
+matrix:
+  allow_failures:
+    rust: nightly
+
+script:
+  - cargo clean
+  - cargo build
+  - cargo test
+
+after_success: |
+  if [[ "$TRAVIS_RUST_VERSION" == stable ]]; then
+    `RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin`
+    # Uncomment the following line for coveralls.io
+    cargo tarpaulin --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
+    # Uncomment the following two lines to create and upload a report for codecov.io
+    cargo tarpaulin --out Xml
+    bash <(curl -s https://codecov.io/bash)
+  fi
